fixed hover class shift issue

--- a/wk2_assignment/css/nav_new.css
+++ b/wk2_assignment/css/nav_new.css
@@ -45,8 +45,11 @@ nav a {
 a.active,
 a:hover {
   color: #62debe;
-  font-weight: bold;
   background: #444;
+}
+
+a.active {
+  font-weight: bold;
 }
 
 @media (max-width: 600px) {
